# inquiry-system

./: .env.example  .env.production  .gitignore  Dockerfile  Makefile  README.md  TEST_REPORT.md  api.py  bid_inquiry.py  cli.py  config.email.yaml  config.example.yaml  config.sources.yaml  configure_feishu.py  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  generate_reports.py  generate_test_data.py  inquiry-monitor.service  interactive_cli.py  main.py  pytest.ini  quick_commands.sh  requirements.txt  run_inquiry.py  seed_demo_data.py  send_inquiry.py  setup.cfg  spec_compare.py  start.py  start.sh  system_inquiry.py  test_email.py  ui.py  web_ui.py  web_viewer.py
docs/: REPORT_ROUND13.md  api.md  conf.py  deployment.md  development.md  email_workflow.md  index.md  modules.md
examples/: bid_project.csv  contacts.csv  contacts_sample.csv  equipment_list.csv  import_history.csv  mixed_systems.csv  products.csv  quick_test.csv  security_system.csv  test_products.csv
src/: __init__.py  ai_insights.py  alert_history.py  anti_block.py  auth.py  bid_quote.py  brand_strategy.py  cache.py  charts.py  cli_helpers.py  competitor.py  confidence.py  config_manager.py  configurable_scraper.py  database.py  db_optimize.py  email_receiver.py  enhanced_history.py  errors.py  exporter.py  feishu_integration.py  feishu_notifier.py  free_scraper.py  history_importer.py  import_history.py  monitor.py  price_parser.py  price_predictor.py  realtime.py  report_generator.py  result_aggregator.py  scheduled_task.py  semantic_search.py  visualize.py  (+5 more)
(+17 files in other folders)
