[metadata]
name = inquiry-system
version = 0.2.0
description = 自动询价系统

[options]
python_requires = >=3.10

[flake8]
max-line-length = 120
exclude = .git,__pycache__,build,dist,.venv,venv
ignore = E203,E266,E501,W503

[coverage:run]
source = src
omit =
    */tests/*
    */test_*.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
